replace some newArrayList() usages with immutable List
GitOrigin-RevId: 04be2a68211a062b51ecc32a55cb4ef3576b06be